--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <h6>Git hub репозиторій</h6>
     </header>
+    <div>
+        <h2>Створення</h2>
+    </div>
 
 </body>
 </html>
