--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div>
         <h2>Створення</h2>
         <li><a href="./gallery.html">Галерея</a></li>
-    </div>
+    </div>    
+    <footer>
+        <h2>contact</h2>
+    </footer>
 
 </body>
 </html>
