--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
         <h4><em> <mark>Git hub репозиторій</mark> </em></h4>
     </header>
     <main>
-    <img src="./images/1_njIT-TVl6FVoL381M3Bdjg.jpeg" alt="">    
+    <img src="./images/1_njIT-TVl6FVoL381M3Bdjg.jpeg" alt="Github2" title="github1" style="width: 180px;">    
     <img src="./images/завантаження.jpg" alt="">    
     <img src="./images/завантаження.png" alt="Github3" title="github3" class="round">
 </main>
