--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
         <h4><em> <mark>Git hub репозиторій</mark> </em></h4>
     </header>
     <main>
-    <img src="./images/1_njIT-TVl6FVoL381M3Bdjg.jpeg" alt="Github2" title="github1" style="width: 180px;">    
-    <img src="./images/завантаження.jpg" alt="">    
-    <img src="./images/завантаження.png" alt="Github3" title="github3" class="round">
+    <img src="./images/1_njIT-TVl6FVoL381M3Bdjg.jpeg" alt="Github1" title="Github1" style="width: 180px;">
+    <img src="./images/завантаження.jpg" alt="Github2" title="Github2" class="round">
+    <img src="./images/femalecodertocat.png" alt="Github3"  title="Github3" style="width: 140px;">
 </main>
 <div>
     <a href="./index.html">Головна</a>
