--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <h4>Git hub</h4>
     </header>
-    <div>
-        <h5>Створення репозиторію</h5>
+    <main>
+    <h5>Створення репозиторію</h5>
+    </main>        
         <li><a href="./gallery.html">Галерея</a></li>
     </div><br>
     <footer>
